# weather-api

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg  tox.ini
.github/workflows/: tests.yml
tests/: test_base.py  test_hydrometric_stations.py  test_units_and_ranges.py  test_url_builder.py  test_weather_stations.py
weather_api/: __init__.py  base.py  hydrometric_stations.py  weather_stations.py
weather_api/utils/: data_types.py  dataframe.py  handlers.py  plot_map.py  plotting_handler.py  url_builder.py  url_handler.py  xarray.py
