[metadata]
name = weather_api
description = A Python package for accessing the GeoMet-OGC-API
long_description = More information in https://api.weather.gc.ca/
url = https://github.com/dhah229/weather-api
version = 0.0.1
author = David Hah
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8

[options]
packages =
    weather_api
install_requires =
    pandas>=1.5.1
    xarray>=2023.1.0
    folium>=0.14.0
python_requires = >=3.8
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    tox>=3.24
